--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@headlessui/react": "^1.7.13",
     "daisyui": "^2.51.5",
     "firebase": "^9.18.0",
+    "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-password-checklist": "^1.4.3",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "18.0.30",
