--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet-async": "^1.3.0",
     "react-password-checklist": "^1.4.3",
     "react-router-dom": "^6.9.0",
+    "react-star-ratings": "^2.3.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -42,7 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
     "typescript": "^5.0.2",
     "vite": "^4.2.1",
     "vite-tsconfig-paths": "^4.0.7"
