--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.18.0",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
+    "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
