--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
+    "@types/react-star-ratings": "^2.3.0",
     "daisyui": "^2.51.5",
     "firebase": "^9.18.0",
     "flowbite": "^1.6.4",
@@ -30,6 +31,7 @@
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-react": "^3.1.0",
