--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-helmet-async": "^1.3.0",
     "react-password-checklist": "^1.4.3",
     "react-router-dom": "^6.9.0",
+    "react-select": "^5.7.2",
     "react-star-ratings": "^2.3.0",
     "uuid": "^9.0.0"
   },
