--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.12.0",
         "@mui/x-date-pickers": "^6.0.4",
+        "@react-google-maps/api": "^2.18.1",
+        "@types/google-map-react": "^2.1.7",
+        "@types/react-geocode": "^0.2.1",
         "@types/react-star-ratings": "^2.3.0",
         "daisyui": "^2.51.5",
         "dayjs": "^1.11.7",
         "firebase": "^9.18.0",
         "flowbite": "^1.6.4",
         "flowbite-react": "^0.4.2",
+        "google-map-react": "^2.2.0",
         "javascript-time-ago": "^2.5.9",
         "react": "^18.2.0",
         "react-currency-input-field": "^3.6.10",
         "react-dom": "^18.2.0",
+        "react-geocode": "^0.2.3",
         "react-helmet-async": "^1.3.0",
         "react-password-checklist": "^1.4.3",
         "react-router-dom": "^6.9.0",
